--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -4,27 +4,35 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ComboBox?> 
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
-	<content>
-		<VBox prefHeight="326.0" prefWidth="513.0">
-			<children>
-				<MenuBar>
-					<menus>
-						<Menu mnemonicParsing="false" text="Registration">
-							<items>
-								<MenuItem fx:id="menuItemAgenda" mnemonicParsing="false" onAction="#onMenuItemAgendaAction" text="Agenda" />
-							</items>
-						</Menu>
-						<Menu mnemonicParsing="false" text="Help">
-							<items>
-								<MenuItem fx:id="menuItemAbout" mnemonicParsing="false" onAction="#onMenuItemAboutAction" text="About" />
-							</items>
-						</Menu>
-					</menus>
-				</MenuBar>
-			</children>
-		</VBox>
-	</content>
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity"
+    minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+    prefWidth="600.0" xmlns="http://javafx.com/javafx/21"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="gui.MainViewController">
+    <content>
+        <VBox prefHeight="326.0" prefWidth="513.0">
+            <children>
+                <MenuBar>
+                    <menus>
+                        <Menu mnemonicParsing="false" text="Registration">
+                            <items>
+                                <MenuItem fx:id="menuItemAgenda"
+                                    mnemonicParsing="false" onAction="#onMenuItemAgendaAction"
+                                    text="Agenda" />
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Help">
+                            <items>
+                                <MenuItem fx:id="menuItemAbout" mnemonicParsing="false"
+                                    onAction="#onMenuItemAboutAction" text="About" />
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
+            </children>
+        </VBox>
+    </content>
 </ScrollPane>
