--- a/src/gui/AgendaList.fxml
+++ b/src/gui/AgendaList.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,11 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="1400.0"
-	prefWidth="2200.0" xmlns="http://javafx.com/javafx/21"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="gui.AgendaListController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1400.0" prefWidth="2200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AgendaListController">
 
 	<Label text="Agendamento Registration">
 		<font>
@@ -29,19 +29,17 @@
 
 	<ToolBar prefHeight="40.0" prefWidth="200.0">
 		<items>
-			<Button fx:id="btNew" mnemonicParsing="false"
-				onAction="#onBtNewAction" text="New" />
+			<Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
 		</items>
 	</ToolBar>
 
 	<HBox spacing="10">
 		<Label text="Código da Agenda:" />
 		<TextField fx:id="txtCodAgenda" />
-		<Button text="Pesquisar" onAction="#handleSearch" />
+		<Button onAction="#handleSearch" text="Pesquisar" />
 		<Label text="Dias:" />
 		<TextField fx:id="txtDias" />
-		<ComboBox fx:id="comboTipoDoc" promptText="Tipo de Documento"
-			onAction="#PesquisarTipoDoc">
+		<ComboBox fx:id="comboTipoDoc" onAction="#PesquisarTipoDoc" promptText="Tipo de Documento">
 			<!-- Os itens do ComboBox serão preenchidos dinamicamente no código Java -->
 		</ComboBox>
 		<Label text="Total de Arquivos:" />
@@ -49,25 +47,26 @@
 
 	</HBox>
 
-	<TableView fx:id="tableViewAgenda" prefHeight="300.0"
-		prefWidth="200.0">
+	<TableView fx:id="tableViewAgenda" prefHeight="300.0" prefWidth="200.0">
 		<columns>
-			<TableColumn fx:id="tableColumnCodigo" minWidth="-1.0"
-				prefWidth="90.0" text="Codigo" />
-			<TableColumn fx:id="tableColumnTipo" minWidth="0.0"
-				prefWidth="110.0" text="Tipo" />
-			<TableColumn fx:id="tableColumnInicio" prefWidth="177.0"
-				text="Inicio" />
-			<TableColumn fx:id="tableColumnFim" prefWidth="178.0"
-				text="Fim" />
-			<TableColumn fx:id="tableColumnArquivo" prefWidth="178.0"
-				text="Arquivo" />
-			<TableColumn fx:id="tableColumnQuantidade"
-				prefWidth="178.0" text="Quantidade" />
-			<TableColumn fx:id="tableColumnSituacao"
-				prefWidth="172.0" text="Situacao" />
+			<TableColumn fx:id="tableColumnCodigo" minWidth="-1.0" prefWidth="90.0" text="Codigo" />
+			<TableColumn fx:id="tableColumnTipo" minWidth="0.0" prefWidth="110.0" text="Tipo" />
+			<TableColumn fx:id="tableColumnInicio" prefWidth="177.0" text="Inicio" />
+			<TableColumn fx:id="tableColumnFim" prefWidth="178.0" text="Fim" />
+			<TableColumn fx:id="tableColumnArquivo" prefWidth="178.0" text="Arquivo" />
+			<TableColumn fx:id="tableColumnQuantidade" prefWidth="178.0" text="Quantidade" />
+			<TableColumn fx:id="tableColumnSituacao" prefWidth="172.0" text="Situacao" />
 			<TableColumn fx:id="tableColumnEDIT" minWidth="0.0" />
 			<TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" />
 		</columns>
 	</TableView>
+	<PieChart fx:id="pieChart" onDragDetected="#updateTableView" />
+   <LineChart fx:id="lineChart">
+     <xAxis>
+       <CategoryAxis side="BOTTOM" />
+     </xAxis>
+     <yAxis>
+       <NumberAxis side="LEFT" />
+     </yAxis>
+   </LineChart>
 </VBox>
